@@ -10,6 +10,11 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import com.fasterxml.jackson.databind.SerializationFeature;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.net.URI;
+import java.time.Duration;
 
 /**
  * This class handles HTTP communication with the backend API.
@@ -20,29 +25,35 @@ public class CalendarApiClient {
   private final String backendUrl = "http://localhost:8080/api/calendar/events";
   private final ObjectMapper objectMapper = new ObjectMapper();
   private String jwtToken;
+  private final HttpClient httpClient;
 
   public CalendarApiClient() {
+    this(HttpClient.newHttpClient());
+  }
+
+  public CalendarApiClient(HttpClient httpClient) {
+    this.httpClient = httpClient;
     objectMapper.registerModule(new JavaTimeModule());
     objectMapper.disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS);
   }
 
   public List<CalendarEvent> getEvents() {
     try {
-      URL url = new URL(backendUrl);
-      HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-      conn.setRequestMethod("GET");
-      conn.setRequestProperty("Accept", "application/json");
+      HttpRequest.Builder builder = HttpRequest.newBuilder()
+        .uri(URI.create(backendUrl))
+        .timeout(Duration.ofSeconds(10))
+        .header("Accept", "application/json")
+        .GET();
       if (jwtToken != null) {
-        conn.setRequestProperty("Authorization", "Bearer " + jwtToken);
+        builder.header("Authorization", "Bearer " + jwtToken);
       }
-      if (conn.getResponseCode() != 200) {
-        System.out.println("Failed to get events. Response code: " + conn.getResponseCode());
+      HttpRequest request = builder.build();
+      HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+      if (response.statusCode() != 200) {
+        System.out.println("Failed to get events. Response code: " + response.statusCode());
         return new ArrayList<>();
       }
-      InputStream is = conn.getInputStream();
-      List<CalendarEvent> events = objectMapper.readValue(is, new TypeReference<List<CalendarEvent>>(){});
-      is.close();
-      conn.disconnect();
+      List<CalendarEvent> events = objectMapper.readValue(response.body(), new TypeReference<List<CalendarEvent>>(){});
       System.out.println("Retrieved " + events.size() + " events from API");
       return events;
     } catch (Exception e) {
@@ -53,35 +64,23 @@ public class CalendarApiClient {
 
   public CalendarEvent addEvent(CalendarEvent event) {
     try {
-      URL url = new URL(backendUrl);
-      HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-      conn.setRequestMethod("POST");
-      conn.setRequestProperty("Content-Type", "application/json");
-      System.out.println("CalendarApiClient " + jwtToken);
+      String json = objectMapper.writeValueAsString(event);
+      HttpRequest.Builder builder = HttpRequest.newBuilder()
+        .uri(URI.create(backendUrl))
+        .timeout(Duration.ofSeconds(10))
+        .header("Content-Type", "application/json")
+        .POST(HttpRequest.BodyPublishers.ofString(json));
       if (jwtToken != null) {
-        conn.setRequestProperty("Authorization", "Bearer " + jwtToken);
-      } else {
-        System.out.println("No JWT token found");
+        builder.header("Authorization", "Bearer " + jwtToken);
       }
-      conn.setDoOutput(true);
-      OutputStream os = conn.getOutputStream();
-      objectMapper.writeValue(os, event);
-      os.flush();
-      os.close();
-      System.out.println(conn.getResponseCode());
-      InputStream errorStream = conn.getErrorStream();
-      if (errorStream != null) {
-        String errorResponse = new String(errorStream.readAllBytes(), StandardCharsets.UTF_8);
-        System.out.println("Error Response: " + errorResponse);
-      }
-      if (conn.getResponseCode() != 200) {
+      HttpRequest request = builder.build();
+      HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+      if (response.statusCode() != 200) {
+        System.out.println("Failed to add event. Response code: " + response.statusCode());
         return null;
       }
-      InputStream is = conn.getInputStream();
-      CalendarEvent created = objectMapper.readValue(is, CalendarEvent.class);
-      is.close();
-      conn.disconnect();
-      System.out.println("Hello   " + created.getEventName()+ " " + created.getEventType());
+      CalendarEvent created = objectMapper.readValue(response.body(), CalendarEvent.class);
+      System.out.println("Created event: " + created.getEventName() + " " + created.getEventType());
       return created;
     } catch (Exception e) {
       e.printStackTrace();
@@ -104,15 +103,16 @@ public class CalendarApiClient {
 
   public boolean deleteEvent(String id) {
     try {
-      URL url = new URL(backendUrl + "/" + id);
-      HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-      conn.setRequestMethod("DELETE");
+      HttpRequest.Builder builder = HttpRequest.newBuilder()
+        .uri(URI.create(backendUrl + "/" + id))
+        .timeout(Duration.ofSeconds(10))
+        .DELETE();
       if (jwtToken != null) {
-        conn.setRequestProperty("Authorization", "Bearer " + jwtToken);
+        builder.header("Authorization", "Bearer " + jwtToken);
       }
-      int responseCode = conn.getResponseCode();
-      conn.disconnect();
-      return responseCode == 200 || responseCode == 204;
+      HttpRequest request = builder.build();
+      HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+      return response.statusCode() == 200 || response.statusCode() == 204;
     } catch (Exception e) {
       e.printStackTrace();
       return false;
@@ -121,25 +121,20 @@ public class CalendarApiClient {
 
   public static String signup(String username, String email, String password) {
     try {
-      URL url = new URL("http://localhost:8080/api/auth/signup");
-      HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-      conn.setRequestMethod("POST");
-      conn.setRequestProperty("Content-Type", "application/json");
-      conn.setDoOutput(true);
+      HttpClient client = HttpClient.newHttpClient();
       String jsonInput = String.format("{\"username\":\"%s\",\"email\":\"%s\",\"password\":\"%s\"}", username, email, password);
-      try (OutputStream os = conn.getOutputStream()) {
-        byte[] input = jsonInput.getBytes("utf-8");
-        os.write(input, 0, input.length);
+      HttpRequest request = HttpRequest.newBuilder()
+        .uri(URI.create("http://localhost:8080/api/auth/signup"))
+        .timeout(Duration.ofSeconds(10))
+        .header("Content-Type", "application/json")
+        .POST(HttpRequest.BodyPublishers.ofString(jsonInput))
+        .build();
+      HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+      if (response.statusCode() < 400) {
+        return response.body();
+      } else {
+        return "Signup failed: " + response.statusCode();
       }
-      InputStream is = (conn.getResponseCode() < 400) ? conn.getInputStream() : conn.getErrorStream();
-      String responseBody = null;
-      if (is != null) {
-        java.util.Scanner s = new java.util.Scanner(is).useDelimiter("\\A");
-        responseBody = s.hasNext() ? s.next() : "";
-        is.close();
-      }
-      conn.disconnect();
-      return responseBody != null && !responseBody.isEmpty() ? responseBody : "Signup failed: " + conn.getResponseCode();
     } catch (Exception e) {
       return "Signup error: " + e.getMessage();
     }
@@ -147,20 +142,17 @@ public class CalendarApiClient {
 
   public static String login(String username, String password) {
     try {
-      URL url = new URL("http://localhost:8080/api/auth/login");
-      HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-      conn.setRequestMethod("POST");
-      conn.setRequestProperty("Content-Type", "application/json");
-      conn.setDoOutput(true);
+      HttpClient client = HttpClient.newHttpClient();
       String jsonInput = String.format("{\"username\":\"%s\",\"password\":\"%s\"}", username, password);
-      try (OutputStream os = conn.getOutputStream()) {
-        byte[] input = jsonInput.getBytes("utf-8");
-        os.write(input, 0, input.length);
-      }
-      int code = conn.getResponseCode();
-      if (code == 200) {
-        java.util.Scanner s = new java.util.Scanner(conn.getInputStream()).useDelimiter("\\A");
-        return s.hasNext() ? s.next() : "";
+      HttpRequest request = HttpRequest.newBuilder()
+        .uri(URI.create("http://localhost:8080/api/auth/login"))
+        .timeout(Duration.ofSeconds(10))
+        .header("Content-Type", "application/json")
+        .POST(HttpRequest.BodyPublishers.ofString(jsonInput))
+        .build();
+      HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+      if (response.statusCode() == 200) {
+        return response.body();
       } else {
         return "Invalid username or password";
       }
@@ -171,17 +163,18 @@ public class CalendarApiClient {
 
   public static String getEvents(String jwtToken) {
     try {
-      URL url = new URL("http://localhost:8080/api/calendar/events");
-      HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-      conn.setRequestMethod("GET");
-      conn.setRequestProperty("Authorization", "Bearer " + jwtToken);
-      int code = conn.getResponseCode();
-      if (code == 200) {
-        InputStream is = conn.getInputStream();
-        java.util.Scanner s = new java.util.Scanner(is).useDelimiter("\\A");
-        return s.hasNext() ? s.next() : "";
+      HttpClient client = HttpClient.newHttpClient();
+      HttpRequest request = HttpRequest.newBuilder()
+        .uri(URI.create("http://localhost:8080/api/calendar/events"))
+        .timeout(Duration.ofSeconds(10))
+        .header("Authorization", "Bearer " + jwtToken)
+        .GET()
+        .build();
+      HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+      if (response.statusCode() == 200) {
+        return response.body();
       } else {
-        return "Error: " + code;
+        return "Error: " + response.statusCode();
       }
     } catch (Exception e) {
       return "Error: " + e.getMessage();
@@ -190,23 +183,19 @@ public class CalendarApiClient {
 
   public static String addEvent(String eventJson, String jwtToken) {
     try {
-      URL url = new URL("http://localhost:8080/api/calendar/events");
-      HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-      conn.setRequestMethod("POST");
-      conn.setRequestProperty("Content-Type", "application/json");
-      conn.setRequestProperty("Authorization", "Bearer " + jwtToken);
-      conn.setDoOutput(true);
-      try (OutputStream os = conn.getOutputStream()) {
-        byte[] input = eventJson.getBytes("utf-8");
-        os.write(input, 0, input.length);
-      }
-      int code = conn.getResponseCode();
-      if (code == 200) {
-        InputStream is = conn.getInputStream();
-        java.util.Scanner s = new java.util.Scanner(is).useDelimiter("\\A");
-        return s.hasNext() ? s.next() : "";
+      HttpClient client = HttpClient.newHttpClient();
+      HttpRequest request = HttpRequest.newBuilder()
+        .uri(URI.create("http://localhost:8080/api/calendar/events"))
+        .timeout(Duration.ofSeconds(10))
+        .header("Content-Type", "application/json")
+        .header("Authorization", "Bearer " + jwtToken)
+        .POST(HttpRequest.BodyPublishers.ofString(eventJson))
+        .build();
+      HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+      if (response.statusCode() == 200) {
+        return response.body();
       } else {
-        return "Error: " + code;
+        return "Error: " + response.statusCode();
       }
     } catch (Exception e) {
       return "Error: " + e.getMessage();
@@ -215,23 +204,19 @@ public class CalendarApiClient {
 
   public static String updateEvent(String eventId, String eventJson, String jwtToken) {
     try {
-      URL url = new URL("http://localhost:8080/api/calendar/events/" + eventId);
-      HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-      conn.setRequestMethod("PUT");
-      conn.setRequestProperty("Content-Type", "application/json");
-      conn.setRequestProperty("Authorization", "Bearer " + jwtToken);
-      conn.setDoOutput(true);
-      try (OutputStream os = conn.getOutputStream()) {
-        byte[] input = eventJson.getBytes("utf-8");
-        os.write(input, 0, input.length);
-      }
-      int code = conn.getResponseCode();
-      if (code == 200) {
-        InputStream is = conn.getInputStream();
-        java.util.Scanner s = new java.util.Scanner(is).useDelimiter("\\A");
-        return s.hasNext() ? s.next() : "";
+      HttpClient client = HttpClient.newHttpClient();
+      HttpRequest request = HttpRequest.newBuilder()
+        .uri(URI.create("http://localhost:8080/api/calendar/events/" + eventId))
+        .timeout(Duration.ofSeconds(10))
+        .header("Content-Type", "application/json")
+        .header("Authorization", "Bearer " + jwtToken)
+        .PUT(HttpRequest.BodyPublishers.ofString(eventJson))
+        .build();
+      HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+      if (response.statusCode() == 200) {
+        return response.body();
       } else {
-        return "Error: " + code;
+        return "Error: " + response.statusCode();
       }
     } catch (Exception e) {
       return "Error: " + e.getMessage();
@@ -240,15 +225,18 @@ public class CalendarApiClient {
 
   public static String deleteEvent(String eventId, String jwtToken) {
     try {
-      URL url = new URL("http://localhost:8080/api/calendar/events/" + eventId);
-      HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-      conn.setRequestMethod("DELETE");
-      conn.setRequestProperty("Authorization", "Bearer " + jwtToken);
-      int code = conn.getResponseCode();
-      if (code == 200 || code == 204) {
+      HttpClient client = HttpClient.newHttpClient();
+      HttpRequest request = HttpRequest.newBuilder()
+        .uri(URI.create("http://localhost:8080/api/calendar/events/" + eventId))
+        .timeout(Duration.ofSeconds(10))
+        .header("Authorization", "Bearer " + jwtToken)
+        .DELETE()
+        .build();
+      HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+      if (response.statusCode() == 200 || response.statusCode() == 204) {
         return "Event deleted successfully";
       } else {
-        return "Error: " + code;
+        return "Error: " + response.statusCode();
       }
     } catch (Exception e) {
       return "Error: " + e.getMessage();
